# ghga-service-chassis-lib

./: .deprecated_files  .description.md  .design.md  .flake8  .mandatory_files  .mandatory_files_ignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .static_files  .static_files_ignore  LICENSE  README.md  fibonacci_seq.py  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  test.py
.devcontainer/: Dockerfile  dev_install  devcontainer.json  docker-compose.yml  license_checker.py
.github/workflows/: check_mandatory_and_static_files.yaml  check_pr_target.yml  check_template_files.yaml  pypi_publish.yaml  static_code_analysis.yaml  unit_and_int_tests.yaml
docs/: README.md
examples/: .hello_world.yaml  README.md
examples/akafka/: README.md  kafka_publisher.py  kafka_subscriber.py
examples/api/: .hello_world.yaml  README.md
examples/api/hello_world_web_server/: __init__.py  __main__.py  api.py  config.py
examples/hello_world_web_server/: __init__.py  __main__.py  api.py  config.py
examples/kafka/: publisher.py  subscriber.py
examples/mongo_connect/: connector.py
examples/postgresql/: __init__.py  __main__.py  config.py  core.py  db.py  models.py  setup_db.py
examples/postgresql/dao/: __init__.py  db.py  db_models.py
examples/pub_sub/: README.md  amqp_publisher.py  amqp_subscriber.py  publisher.py  subscriber.py
ghga_service_chassis_lib/: __init__.py  __main__.py  akafka.py  api.py  config.py  kafka.py  kafka_testing.py  mongo_connect.py  object_storage_dao.py  object_storage_dao_testing.py  postgresql.py  postgresql_testing.py  pubsub.py  pubsub_testing.py  s3.py  s3_testing.py  utils.py
scripts/: check_mandatory_and_static_files.py  get_package_name.py  license_checker.py  s3_test_workflow.py  update_config_docs.py  update_static_files.py  update_template_files.py
scripts/script_utils/: cli.py
tests/database_connection/: test_mongo_connect.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_api.py  test_mongo_connect.py  test_postgresql.py  test_pubsub.py  test_pubsub_.py  test_s3.py
tests/integration/fixtures/: amqp.py  example_schema.json  hello_world_test_app.py  postgresql.py  pubsub.py  s3.py  storage.py  test_file.txt  test_workflow.py  utils.py
tests/unit/: test_akafka.py  test_api.py  test_config.py  test_kafka.py  test_object_storage_dao.py  test_s3.py  test_utils.py
tests/unit/fixtures/: __init__.py  config.py  hello_world_test_app.py  object_storage_dao.py  utils.py
