# Copyright 2021 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = ghga_service_chassis_lib
version = attr: ghga_service_chassis_lib.__version__
description = A library that contains the basic chassis functionality used in services of GHGA
url = https://github.com/ghga-de/ghga-service-chassis-lib
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic==1.8.2
    PyYAML==5.4.1
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    my-microservice = ghga_service_chassis_lib.__main__:run_cli

[options.extras_require]
api =
    fastapi==0.65.2
    uvicorn[standard]==0.13.4
dev =
    pytest
    pytest-cov
    mypy
    pylint
    flake8
    black
    bandit
    pre-commit
    requests
all =
    %(dev)s
    %(api)s


[options.packages.find]
exclude = tests
