# Copyright 2021 - 2023 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = ghga_service_chassis_lib
version = attr: ghga_service_chassis_lib.__version__
description = A library that contains the basic chassis functionality used in services of GHGA
url = https://github.com/ghga-de/ghga-service-chassis-lib
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic==1.10.4
    PyYAML==6.0
python_requires = >= 3.9

[options.package_data]
* = *.yaml, *.json, *.html

[options.entry_points]
console_scripts =
    my-microservice = ghga_service_chassis_lib.__main__:run_cli

[options.extras_require]
api =
    fastapi==0.89.1
    uvicorn[standard]==0.20.0
    httpyexpect==0.2.4
    requests==2.28.1
kafka =
    kafka-python==2.0.2
    jsonschema==4.17.3
pubsub =
    pika==1.3.1
    jsonschema==4.17.3
mongo_connect =
    motor==3.1.1
object_storage_dao =
s3 =
    %(object_storage_dao)s
    boto3==1.26.46
    botocore==1.29.47
postgresql =
    sqlalchemy==1.4.46
    asyncpg==0.27.0
    psycopg2==2.9.5
dev =
    pytest==7.2.0
    pytest-asyncio==0.20.3
    pytest-cov==4.0.0
    mypy==0.991
    mypy-extensions==0.4.3
    types-requests==2.28.11.7
    pylint==2.15.10
    click==8.1.3
    black==22.12.0
    flake8==6.0.0
    isort==5.11.5
    bandit==1.7.4
    pre-commit==2.21.0
    mkdocs==1.4.2
    mkdocs-autorefs==0.4.1
    mkdocs-material==9.0.3
    mkdocs-material-extensions==1.1.1
    mkdocstrings==0.19.1
    mkdocstrings-python-legacy==0.2.3
    # 3.4.1 -> 3.4.2 causes issues in hexkit, but 3.7.1 works again
    # 3.7.1 currently does not work with ghga-connector and dcs
    testcontainers[kafka,mongo,postgresql]==3.4.1
    typer==0.7.0
    sqlalchemy-utils==0.39.0
    sqlalchemy-stubs==0.4
    httpx==0.23.3
all =
    %(api)s
    %(pubsub)s
    %(kafka)s
    %(mongo_connect)s
    %(postgresql)s
    %(dev)s
    %(object_storage_dao)s
    %(s3)s

[options.packages.find]
exclude = tests
